--- a/index.html
+++ b/index.html
@@ -12,61 +12,81 @@
 
 <body>
     <div id="webbyoly">
-        <header>
-            <nav class="navbar">
-                <a href="index.html"><img src="./assets/shots/iMgma.png" alt="not found" class="max-h-12"></a>
-                <div class="nav-deff">
-                    <button class="btn-def bdr_hover_btn">
-                        Book a Demo
-                    </button>
-                    <div class="menu-icon bdr_hover_btn" id="menuBar" onclick="toggleMenu()">
-                        <div class="slice top"></div>
-                        <div class="slice bottom"></div>
+        <main id="main">
+            <header>
+                <nav class="navbar">
+                    <a href="index.html"><img src="./assets/shots/iMgma.png" alt="not found" class="max-h-12"></a>
+                    <div class="nav-deff">
+                        <button class="btn-def bdr_hover_btn">
+                            Book a Demo
+                        </button>
+                        <div class="menu-icon bdr_hover_btn" id="menuBar" onclick="toggleMenu()">
+                            <div class="slice top"></div>
+                            <div class="slice bottom"></div>
+                        </div>
+                    </div>
+                </nav>
+                <div id="sidebar" class="sideNavgation">
+                    <div class="sidebar-binding">
+                        <div class="sdbr-badge">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418" />
+                            </svg>
+                        </div>
+                        <div class="sdbr-top">
+                            <a href="#" class="sdbr-links">Product</a>
+                            <a href="#" class="sdbr-links">Mission</a>
+                            <a href="#" class="sdbr-links">Bolg</a>
+                            <a href="#" class="sdbr-links">Events</a>
+                            <a href="#" class="sdbr-links">FAQ</a>
+                            <a href="#" class="sdbr-links">Conatct</a>
+                        </div>
+                        <div class="sdbr-bottom">
+                            <a href="#">Twitter</a>
+                            <a href="#">LinkedIn</a>
+                            <a href="#">Instagram</a>
+                            <a href="#">Telegram</a>
+                            <a href="#">Youtube</a>
+                        </div>
                     </div>
                 </div>
-            </nav>
-            <div id="sidebar" class="sideNavgation">
-                <div class="sidebar-binding">
-                    <div class="sdbr-badge">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418" />
-                        </svg>
-                    </div>
-                    <div class="sdbr-top">
-                        <a href="#" class="sdbr-links">Product</a>
-                        <a href="#" class="sdbr-links">Mission</a>
-                        <a href="#" class="sdbr-links">Bolg</a>
-                        <a href="#" class="sdbr-links">Events</a>
-                        <a href="#" class="sdbr-links">FAQ</a>
-                        <a href="#" class="sdbr-links">Conatct</a>
-                    </div>
-                    <div class="sdbr-bottom">
-                        <a href="#">Twitter</a>
-                        <a href="#">LinkedIn</a>
-                        <a href="#">Instagram</a>
-                        <a href="#">Telegram</a>
-                        <a href="#">Youtube</a>
+            </header>
+            <section id="sec1">
+                <div class="sec1-binding">
+                    <div class="hero-info-frame">
+                        <h1 class="hero-title">Experience Real<br>Estate Agility</h1>
+                        <div class="hero-mini">
+                            <p class="hero-subtitle">Create a Digital Twin Token (DTT®) of your existing building and
+                                release the potential of Web3.</p>
+                            <button class="btn--cta">Learn More</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
-        <section id="sec1">
-            <div class="sec1-binding">
-                <div class="hero-info-frame">
-                    <h1 class="hero-title">Experience Real<br>Estate Agility</h1>
-                    <div class="hero-mini">
-                        <p class="hero-subtitle">Create a Digital Twin Token (DTT®) of your existing building and release the potential of Web3.</p>
-                        <button class="btn--cta">Learn More</button>
-                    </div>
+                <video loop autoplay muted src="./assets/shots/mt4transition.mp4"></video>
+            </section>
+            <section id="sec2">
+                <div class="sec2-binding">
+                  <div class="text-container">
+                    <p class="subtitle--main">Certify your building as a Digital Twin Token (DTT®)</p>
+                    <h1 class="minCan-title clutter-title">
+                      The Digital Twin Token is a unique digital asset backed by property data.
+                      Magma combines your building’s components and systems essential information
+                      into a DTT®.
+                    </h1>
+                  </div>
                 </div>
-            </div>
-            <video loop autoplay muted src="./assets/shots/mt4transition.mp4"></video>
-        </section>
+            </section>
+            <section id="sec3">
+                <canvas></canvas>
+            </section>
+              
+        </main>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <!-- <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>  -->
     <script src="main.js"></script>
 </body>
 
