--- a/index.html
+++ b/index.html
@@ -68,20 +68,33 @@
             </section>
             <section id="sec2">
                 <div class="sec2-binding">
-                  <div class="text-container">
-                    <p class="subtitle--main">Certify your building as a Digital Twin Token (DTT®)</p>
-                    <h1 class="minCan-title clutter-title">
-                      The Digital Twin Token is a unique digital asset backed by property data.
-                      Magma combines your building’s components and systems essential information
-                      into a DTT®.
-                    </h1>
-                  </div>
+                    <div class="text-container">
+                        <p class="subtitle--main">Certify your building as a Digital Twin Token (DTT®)</p>
+                        <h1 class="minCan-title clutter-title">
+                            The Digital Twin Token is a unique digital asset backed by property data.
+                            Magma combines your building’s components and systems essential information
+                            into a DTT®.
+                        </h1>
+                    </div>
                 </div>
             </section>
             <section id="sec3">
+                <div class="canvas_3__overlay"></div>
                 <canvas></canvas>
             </section>
-              
+            <section id="sec4">
+                <div class="sec4-binding">
+                    <p class="subtitle--main">Connect the Building's twin to your stakeholders</p>
+                    <h1 class="minCan-title clutter-title2">
+                        Users connect directly to the DTT® without any intermediaries. As Stakeholder, they have the
+                        power to upload and verify information that enriches the Digital Twin Token. A Stakeholder's
+                        ability to access validated-data to perform tasks depends on their specific role.
+                    </h1>
+                </div>
+            </section>
+            <section id="sec5">
+                <canvas></canvas>
+            </section>
         </main>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
