--- a/index.html
+++ b/index.html
@@ -95,11 +95,25 @@
             <section id="sec5">
                 <canvas></canvas>
             </section>
+            <section id="sec6">
+                <div class="sec6-binding">
+                    <p class="subtitle--main">Increase your Digital Twin Token’s value</p>
+                    <h1 class="minCan-title clutter-title2">
+                        DTT® data increases the value of your digital asset by lowering operational costs, improving energy use, assisting commercialization, and boosting the liquidity of your building.
+                    </h1>
+                </div>
+            </section>
+            <section id="sec7">
+                <div id="index-circle">
+                    <div id="index-circle-inner"></div>
+                </div>
+                <canvas></canvas>
+            </section>
         </main>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <!-- <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>  -->
+    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
     <script src="main.js"></script>
 </body>
 
